--- a/styles/media.css
+++ b/styles/media.css
@@ -142,7 +142,7 @@
     .nav-content__list{
         flex-direction: column;
         position: fixed;
-        right: 100%;
+        right: -100%;
         top: 0;
         width: 100%;
         height: 100%;
@@ -177,7 +177,7 @@
         top: 6%;
     }
     .burger:hover ~ .nav-content__list{
-        right: 6%;
+        right: 0;
     }
     .header-content h1{
         margin-top: 150px;
@@ -258,7 +258,7 @@
         width: 265px;
     }
     .contact-emailsend{
-        width: 378px;
+        width: 250px;
         margin: auto;
     }
     .text-1{
